# CC-NuE-XSec

./: .gitignore  LICENSE  combine_file.py  readme.md  setup_ccantinue.sh  setup_ccnue.sh
CVUniversePythonBinding/: CCNuEUniverseDict.h  CCNuEUniverseDict.xml  CMakeLists.txt  PythonMinervaUniverse.h  temp.py
Excess/: DataExcess.py
PlotUtils/: HistWrapper.py  LoadPlotUtilsLib.py  __init__.py
UnfoldUtils/: LoadUnfoldUtilsLib.py  __init__.py
background_fit/: backgroundFit.py  bkgfit_pi0Nrhc.root  bkgfit_ptrhc.root  bkgfit_scale.root  bkgfit_scale_pt.root  bkgfit_scale_rhc.root  helicityAddition.py  propagate_scale.py
configs/: POT.json
configs/CCAntiNuE/config/: CutConfig.py
configs/CCNuE/config/: AnalysisConfig.py  BackgroundFitConfig.py  CutConfig.py  DrawingConfig.py  GRIDConfig.py  PlotConfig.py  SignalDef.py  SystematicsConfig.py  UnfoldingConfig.py
configs/CCNuEMu/config/: AnalysisConfig.py  CutConfig.py  DrawingConfig.py  GRIDConfig.py  PlotConfig.py  SystematicsConfig.py
configs/CCNuMu/config/: AnalysisConfig.py  CutConfig.py  DrawingConfig.py  GRIDConfig.py  PlotConfig.py  SignalDef.py  SystematicsConfig.py
efficiency/: calEfficiency.py
file_option/: makePlaylists.sh
selection/: .rootlogon.C  eventSelection.py  gridSelection.py  log  plotSelection.py  run.sh
studies/: Eavail_Lepton_Pt.C  Eavail_Lepton_Pt.eps  Eavail_q3.C  Eavail_q3.eps  Enu.C  Enu.eps  FluxComp.py  Leakagefit.py  MyTransWarpper.py  PlotdEdistribution.py  TransScript.sh  chi2test.py  closureTest.py  cutStudy.py  emu_scale.root  log  numunue_weight.py  outlier_finder.py  plotDFR.py  plotwarping.py  printEfficiencyNPurity.C  readingWarping.py  tablateCut.py  test.py  test_unfolding.py  warppingStudy.py  xtalkplots.py
tools/: CutLibrary.py  EventClassification.py  KinematicsCalculator.py  LatError.py  MyHistograms.py  PlotLibrary.py  PlotTools.py  SystematicsUniverse.py  TruthTools.py  Utilities.py  __init__.py  mcweight.py  pcweight.py  unfoldingwrapper.py
unfolding/: mergeMultipleStategies.C  mergeMultipleStrategies.py  unfolding.py  unfoldingWarpper.py
xsec/: Closure.py  getXSection.py
